refactor(openapi): 重构回调数据结构和方法命名